# Buuble_Game

./: README.md
C_program/: CMakeLists.txt
C_program/include/: Carta.h  JuegoVisual.h  Jugador.h  Menu.h
C_program/src/: Carta.cpp  JuegoVisual.cpp  Jugador.cpp  Menu.cpp  main.cpp
web/: index2.html
